better line moves

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,6 @@
 *.exe
 *.out
 *.app
+templateVideoOF.xcodeproj/project.xcworkspace/xcuserdata/fbariod.xcuserdatad/UserInterfaceState.xcuserstate
+templateVideoOF.xcodeproj/xcuserdata/fbariod.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+templateVideoOF.xcodeproj/xcuserdata/fbariod.xcuserdatad/xcschemes/xcschememanagement.plist
